# Determinant

./: CMakeLists.txt  README.md
Test/EndToEndtest/: CMakeLists.txt  data2.txt  main.cpp  out.txt
Test/UnitTest/: CMakeLists.txt  test.cpp
Test/UnitTest/data/: test1.det_trace  test1.neg_transp  test2.det_trace  test2.neg_transp  test3.det_trace
Test/UnitTest/expected_data/: results.det_trace  results1.neg  results1.transp  results2.neg  results2.transp
include/: matrix.hpp
source/: main.cpp
